--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "router": "^1.3.7",
+    "vue-router": "^4.1.5"
   }
 }
