--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "start": "npm run serve"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.16",
     "vue": "^3.2.13",
@@ -23,7 +24,8 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "webpack-cli": "^4.10.0"
   },
   "eslintConfig": {
     "root": true,
